--- a/index.old.html
+++ b/index.old.html
@@ -12,14 +12,7 @@
   </script>
 </head>
 <body>
-  <img
-    src="Landing_Page.png"
-    width="2067"
-    height="1150"
-    border="0"
-    usemap="#map"
-    style="max-width:100%; height:auto; display:block; margin:0 auto;"
-  />
+  <img src="Landing_Page.png" width="2067" height="1150" border="0" usemap="#map" />
   <map name="map">
     <area shape="rect"
           coords="769,617,1262,684"
@@ -33,8 +26,6 @@
     <!-- #$VERSION:2.3 -->
     <!-- #$AUTHOR:iwoolsey -->
   </map>
-
-  <!-- Call the resizer js -->
   <script src="imageMapResizer.min.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", function () {
