added hide overflow CSS
hoping to address the tiny bit of scroll when the page loads.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Image Map Example</title>
+  <style>html,body{margin:0;padding:0;overflow:hidden}</style>
   <script>
     // Detect if the page is loaded inside an iframe
     if (window.top === window.self) {
