--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Image Map Example</title>
-  <style>html,body{margin:0;padding:0;overflow:hidden}</style>
+  <title>Landing Page</title>
+  <style>html,body{margin:0;padding:0;overflow-y:auto;overflow-x:hidden}</style>
   <script>
     // Detect if the page is loaded inside an iframe
     if (window.top === window.self) {
@@ -25,7 +25,7 @@
     <area shape="rect"
           coords="769,617,1262,684"
           href="https://advncs-team.monday.com/overviews/28410050"
-          target="_blank"
+          target="_self"
           rel="noopener noreferrer"
     />
     <!-- #$-:Image map file created by GIMP Image Map plug-in -->
