--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <area shape="rect"
           coords="769,617,1262,684"
           href="https://advncs-team.monday.com/overviews/28410050"
-          target="_blank"
+          target="_top"
           rel="noopener noreferrer"
     />
     <!-- #$-:Image map file created by GIMP Image Map plug-in -->
